<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/FriendRequestID"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/AboutID"
        android:layout_alignEnd="@+id/EditProfileButtonID"
        android:layout_alignParentEnd="true"
        app:srcCompat="@android:drawable/btn_plus" />

    <TextView
        android:id="@+id/UsernameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/NameOfPersonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/ProfilePicID"
        android:text="@string/NameOfPerson"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/ProfilePicID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UsernameID"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/ProfileStatID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UsernameID"

        android:layout_alignRight="@+id/ProfilePicID"
        android:layout_alignParentEnd="true"
        android:text="@string/ProfileStat"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/AboutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NameOfPersonID"
        android:ellipsize="end"
        android:maxLength="100"

        android:text="@string/About"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <!--android:singleLine="true"-->


    <Button
        android:id="@+id/EditProfileButtonID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/AboutID"
        android:text="@string/EditProfileButton"

        android:textSize="20sp" />
</RelativeLayout>


